--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
   <base href="{{ site.base_url }}/">
 
-  <link rel="stylesheet" href="https://unpkg.com/remarkdown.css/dist/remarkdown.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/remarkdown.css/dist/remarkdown.css"> -->
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   <link rel="stylesheet"
