try display pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     <header>
       <span><a href="./">{{ site.name }}</a></span>
       <span>
-        {%for p in site.pages%}
+        {%for p in site.heads%}
         {{p}}
         {%endfor%}
       </span>
