--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,10 @@
 <body class="remarkdown h1-underline h2-underline table-marker hr-hyphen">
   <div class="container">
     <header>
-      <span><a href="./">{{ site.name }}</a></span>
       <span>
+        <a href="./">{{ site.name }}</a>
         {%for p in site.heads%}
-        {{p}}
+        <a href="./pages/{{p}}">/{{p}}</a>
         {%endfor%}
       </span>
       <form action="{{ site.repo_url }}/search" method="get" style="float: right">
