--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   <base href="{{ site.base_url }}/">
 
   <link rel="stylesheet" href="assets/css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> -->
   <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
@@ -31,15 +31,15 @@
   <div class="container">
     <header>
       <span>
-        <a href="./">{{ site.name }}</a>
+        <a href="./">{{site.name}}</a>
         {%for p in site.heads%}
         <a href="./pages/{{p}}">/{{p}}</a>
         {%endfor%}
       </span>
-      <form action="{{ site.repo_url }}/search" method="get" style="float: right">
+      <!-- <form action="{{ site.repo_url }}/search" method="get" style="float: right">
         <input type="search" name="q" placeholder="Search">
         <input type="hidden" name="l" value="Markdown" style="display:none">
-      </form>
+      </form> -->
     </header>
     <section style="margin-top: 1em; color: #999;">
     {% if page.date %}<span class="date">{{ page.date }}</span>{% endif %}
