--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         {%endfor%}
       </span>
     </nav>
-    <section style="margin-top: 1em; color: #999;">
+    <section>
     {% if page.date %}<span class="date">{{ page.date }}</span>{% endif %}
     {% if page.tags %}
     {% assign tags = page.tags | split:' ' %}
