--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width" content="initial-scale=1">
+  <link rel="icon" href="data/img/tibl.png" />
+  <link rel="stylesheet" href="assets/css/normalize.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/sakura.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/user.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
   <title>{% if page.title %}{{ page.title }}{% endif %}</title>
-
   <base href="{{ site.base_url }}/">
 
-  <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> -->
+  <!-- things for highlighting-->
   <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
@@ -28,8 +30,9 @@
     });
   </script>
 </head>
-<body> 
-  <nav>
+
+<body>
+    <nav>
       <p>
         <a href="./">{{site.name}}</a>
         {%for p in site.heads%}
@@ -37,25 +40,7 @@
         {%endfor%}
       </p>
     </nav>
-    <section>
-    {% if page.date %}<span class="date">{{ page.date }}</span>{% endif %}
-    {% if page.tags %}
-    {% assign tags = page.tags | split:' ' %}
-    <ul class="tags">
-      {% for tag in tags %}
-      <button href="./{{ tag }}">{{ tag }}</button>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    {% if page.date %}
-      <a style="float: right" href="{{ site.repo_url }}/edit/master/{{ page.name }}">Edit</a>
-    {% endif %}
-    </section>
-    <section>
-      {{ content }}
-    </section>
-    <footer>Powered by <a href="https://abhin4v.github.io/precis/">Precis</a></footer>
-  </div>
+  <div id="content"> {{content}}</div>
+  <footer>Powered by <a href="https://abhin4v.github.io/precis/">Precis</a></footer>
 </body>
 </html>
-
