--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <base href="{{ site.base_url }}/">
   <link rel="icon" href="data/img/tibl.png" />
   <link rel="stylesheet" href="assets/css/normalize.css" type="text/css">
-  <link rel="stylesheet" href="assets/css/sakura.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   <link rel="stylesheet" href="assets/css/user.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet"> 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
